# linkstamp

./: Cargo.toml  README  README.md  example-links.idm  example-links.toml  flake.nix
src/: main.rs
templates/: feed.xml  links.html
