[package]
name = "linkstamp"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
base64-url = "2"
clap = { version = "4", features = ["derive"] }
derive_deref = "1"
idm = "0.4"
indexmap = { version = "1", features = ["serde"] }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
